--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  clair: ovotech/clair-scanner@dev:clair-reports
+  clair: ovotech/clair-scanner@1.4.24
 
 jobs:
   scan_images:
