--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
                   BUILD_TAG="$(date "+%d-%m-%Y")"
               else
                   TAG="${filename#"Dockerfile-"}"
-                  BUILD_TAG="${terraform}$(date "+%d-%m-%Y")"
+                  BUILD_TAG="${TAG}_$(date "+%d-%m-%Y")"
               fi
 
               docker build --tag "ovotech/${ORB}:${BUILD_TAG}" \
