--- a/terraform/executor/Dockerfile-0.12
+++ b/terraform/executor/Dockerfile-0.12
@@ -1,6 +1,6 @@
 FROM debian:buster-slim
 
-# This is the default executor image in the terraform orb
+# This is the terraform-0.12 executor image in the terraform orb
 
 ARG TF_VERSION=0.12.0
 ARG GCLOUD_VERSION=247.0.0
