--- a/terraform/orb.yml
+++ b/terraform/orb.yml
@@ -6,11 +6,11 @@ executors:
     description: "Terraform executor"
     docker:
       - image: ovotech/terraform:0.11
-  terraform-0.11:
+  terraform_0.11:
     description: "Terraform 0.11 executor"
     docker:
       - image: ovotech/terraform:0.11
-  terraform-0.12:
+  terraform_0.12:
     description: "Terraform 0.12 executor"
     docker:
       - image: ovotech/terraform:0.12
